Created fragments for home/search and added fragment manager

--- a/app/src/main/res/drawable/buttons_background.xml
+++ b/app/src/main/res/drawable/buttons_background.xml
@@ -10,7 +10,7 @@
 
 
     <stroke android:width="3dp"
-        android:color="@color/design_default_color_primary"
+        android:color="@color/colorPrimary"
         ></stroke>
 
 
