--- a/app/src/main/res/drawable/button_black_background.xml
+++ b/app/src/main/res/drawable/button_black_background.xml
@@ -9,7 +9,7 @@
 
 
     <stroke android:width="4dp"
-        android:color="@color/black"
+        android:color="@color/colorPrimaryDark"
         ></stroke>
 
 
