--- a/app/src/main/res/drawable/inputs_background.xml
+++ b/app/src/main/res/drawable/inputs_background.xml
@@ -10,7 +10,7 @@
 
 
     <stroke android:width="1dp"
-        android:color="@color/design_default_color_primary_dark"
+        android:color="@color/colorPrimaryDark"
         ></stroke>
 
 
