--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,6 +21,7 @@
                 android:layout_height="wrap_content">
 
                 <ImageView
+                    android:paddingTop="5dp"
                     android:layout_width="100dp"
                     android:layout_height="50dp"
                     android:layout_alignParentLeft="true"
