--- a/app/src/main/res/layout/posts_layout.xml
+++ b/app/src/main/res/layout/posts_layout.xml
@@ -28,7 +28,7 @@
                 android:padding="5dp" />
 
             <TextView
-                android:id="@+id/user_name_search"
+                android:id="@+id/user_name_post"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="user name"
