--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -49,15 +49,15 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <ScrollView
+    <RelativeLayout
         android:id="@+id/scroll_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@+id/app_bar_layout_profile_frag">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <LinearLayout
@@ -71,6 +71,7 @@
                     android:id="@+id/pro_image_profile_frag"
                     android:layout_width="120dp"
                     android:layout_height="120dp"
+                    android:layout_marginLeft="10dp"
                     android:src="@drawable/profile" />
 
                 <LinearLayout
@@ -188,8 +189,9 @@
                     android:id="@+id/full_name_profile_frag"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
                     android:text="Full name"
-                    android:textSize="13dp"
+                    android:textSize="14dp"
                     android:textStyle="bold"
                     android:textColor="@android:color/black" />
 
@@ -197,8 +199,9 @@
                     android:id="@+id/bio_profile_frag"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
                     android:text="Bio"
-                    android:textSize="13dp"
+                    android:textSize="14dp"
                     android:textColor="@android:color/black" />
 
             </LinearLayout>
@@ -209,8 +212,8 @@
                 android:orientation="horizontal"
                 android:background="@drawable/button_black_background"
                 android:layout_marginTop="10dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp">
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp">
 
                 <ImageButton
                     android:id="@+id/images_grid_view_btn"
@@ -232,8 +235,19 @@
 
             </LinearLayout>
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view_upload_pic"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view_saved_pic"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone" />
+
         </LinearLayout>
 
-    </ScrollView>
+    </RelativeLayout>
 
 </RelativeLayout>
