--- a/app/src/main/res/layout/posts_layout.xml
+++ b/app/src/main/res/layout/posts_layout.xml
@@ -4,9 +4,10 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="12dp"
+    android:layout_marginTop="6dp"
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp"
+    android:layout_marginBottom="6dp"
     app:cardElevation="5dp">
 
     <LinearLayout
