--- a/app/src/main/res/layout/add_story_item.xml
+++ b/app/src/main/res/layout/add_story_item.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="60dp"
+    android:layout_width="62dp"
     android:layout_height="wrap_content"
     android:layout_marginStart="10dp">
 
     <RelativeLayout
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
         android:layout_gravity="center"
         android:layout_marginTop="5dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/story_image"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:src="@drawable/profile"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true" />
@@ -37,7 +37,6 @@
         android:textColor="@color/colorPrimaryDark"
         android:layout_gravity="center"
         android:maxLines="1"
-        android:textSize="12sp"
         android:text="Add Story" />
 
 </LinearLayout>
