--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -40,6 +40,7 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:src="@drawable/options"
+                    android:layout_marginRight="11dp"
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true" />
 
